oioioi/base/static/common/responsive.css
@media screen and (max-width: 1135px)
{
    .btn .toolbar-button-text
    {
        display: none;
    }

    .corner-icons
    {
        text-align: left !important;
        left: 260px;
    }

    /* because heading would be under buttons */
    .main-content h2, .main-content h3
    {
        max-width: 250px;
    }
}

/* http://engineering.hoteltonight.com/using-css-media-queries-for-multi-platform/ */
@media only screen and (max-device-width: 480px)
    /* Medium- and Low-DPI Smartphones
     *
     * Well, it's a lot of zooming, but still can be used by less nervous
     * people. :)
     */
{
    #main-navbar {
        position: absolute;
        width: 1000px;
    }

    header#grp-header {
        position: absolute;
    }

    #menu_div {
        position: absolute;
        min-height: 1000px;
    }

    footer.grp-fixed-footer {
        position: absolute;
        width: 600px;
    }

    footer.grp-fixed-footer > ul {
        margin-left: 0 !important;
    }
}

